fixed issue where contact form was being overlapped by the footer at some screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body h1 {
 }
 
 body h2 {
-    font-size: 30px;
+    font-size: 36px;
     color: #fafafa;
 }
 
@@ -471,6 +471,8 @@ input[type=text], input[type=email], select, textarea{
 
 .fbutton-div {
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 
